--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="//db.onlinewebfonts.com/c/833f5a24839f438964a942d79c582065?family=Goku"
       type="text/css"
     />
-    <title>Vite + React</title>
+    <title>Sameer Bagwan</title>
   </head>
   <body>
     <div id="root"></div>
