--- a/index.html
+++ b/index.html
@@ -2,13 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/sblogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="//db.onlinewebfonts.com/c/833f5a24839f438964a942d79c582065?family=Goku"
-      type="text/css"
-    />
     <title>Sameer Bagwan</title>
   </head>
   <body>
